@@ -57,6 +57,9 @@ version 2.5.0:
     Drawback: this file can be changed manually by the user so if someone knows
     a method to do the same thing but only managed by root, we take???
   - Bugfix API: quotes where badly escaped into job submission (Ugo.Meda@insa-rennes.fr)
+  - Add the possibility to automatically resubmit idempotent job which ends
+    with an exit code of 99:
+         oarsub -t idempotent "sleep 5; exit 99"
 
 version 2.4.4:
 --------------
